# Research-Work

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml
data/: legal_contract_eval.jsonl
prompts/: legal_rubric.md
results/: eval_results.csv
study/: config.py  dataset.py  evaluate.py  providers.py  scoring.py  visualize.py
tokens-study/: token-compare.py  token_study_results.csv  visualization.py
