[project]
name = "phd-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.68.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "tabulate>=0.10.0",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
]
